nav bar avec login et homepage ok

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,7 +8,16 @@
   <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
 <body>
-
+<nav>
+      <ul>
+        <li id="to-left">
+          <p><a href="/"> UPOSH|ME </a></p>
+        </li>
+        <li id="to-right">
+        <a href="/login">Login</a>
+        </li>
+      </ul>
+    </nav>
   {{{body}}}
 
   <script src="/javascripts/script.js"></script>
