ajout du footer dans layout.hbs

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,17 +8,35 @@
   <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
 <body>
-<nav>
-      <ul>
-        <li id="to-left">
-          <p><a href="/"> UPOSH|ME </a></p>
-        </li>
-        <li id="to-right">
-        <a href="/login">Login</a>
-        </li>
-      </ul>
-    </nav>
+  <nav>
+    <ul>
+      <li id="to-left">
+        <p><a href="/"> UPOSH|ME </a></p>
+      </li>
+      <li id="to-right">
+      <a href="/login">Login</a>
+      </li>
+    </ul>
+  </nav>
+
   {{{body}}}
+
+  <footer>
+    <ul>
+      <li>
+        <p><!--<a href="/">--> FAQ </a></p>
+      </li>
+      <li>
+        <p><!--<a href="/">--> CONTACT </a></p>
+      </li>
+      <li>
+        <p><!--<a href="/">--> CONDITIONS </a></p>
+      </li>
+      <li>
+        <p><!--<a href="/">--> CONFIDENTIALITÉ </a></p>
+      </li>
+    </ul>
+  </footer>
 
   <script src="/javascripts/script.js"></script>
 </body>
