CSS work : ajout root, footer, homepage in progress

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,7 @@
         <p><a href="/"> UPOSH|ME </a></p>
       </li>
       <li id="to-right">
-      <a href="/login">Login</a>
+      <a href="/login">SE CONNECTER</a>
       </li>
     </ul>
   </nav>
@@ -22,6 +22,8 @@
   {{{body}}}
 
   <footer>
+    <h3>UPOSH | ME</h3>
+    <div class ="lign-footer"></div>
     <ul>
       <li>
         <p><!--<a href="/">--> FAQ </a></p>
