--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,8 +1,101 @@
+*, :before, :after {box-sizing:border-box;}
+
+/* creer les variables couleurs */
+:root {
+  --gold: #EEAB00;
+  --light-grey: #FDFDFD;
+  --medium-grey: #c4c4c4;
+  --black-button: #3C3C3C;
+  
+}
+
 body {
-  padding: 50px;
+  // padding: 50px;
+  margin:0;
+  background-color: #FDFDFD;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+// a {
+//   color:inherit;
+//   text-decoration:none;
+// }
+
+/*
+##    ##    ###    ##     ## ########     ###    ########  
+###   ##   ## ##   ##     ## ##     ##   ## ##   ##     ## 
+####  ##  ##   ##  ##     ## ##     ##  ##   ##  ##     ## 
+## ## ## ##     ## ##     ## ########  ##     ## ########  
+##  #### #########  ##   ##  ##     ## ######### ##   ##   
+##   ### ##     ##   ## ##   ##     ## ##     ## ##    ##  
+##    ## ##     ##    ###    ########  ##     ## ##     ## 
+*/
+
+nav {
+  padding-right:1em;
+}
+
+
+nav ul {
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style-type: none;
+}
+
+/*
+########  #######   #######  ######## ######## ########  
+##       ##     ## ##     ##    ##    ##       ##     ## 
+##       ##     ## ##     ##    ##    ##       ##     ## 
+######   ##     ## ##     ##    ##    ######   ########  
+##       ##     ## ##     ##    ##    ##       ##   ##   
+##       ##     ## ##     ##    ##    ##       ##    ##  
+##        #######   #######     ##    ######## ##     ## 
+*/
+
+footer {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background:white;
+}
+
+footer h3 {
+  text-align: center;
+}
+
+.lign-footer {
+  border-bottom: 1px solid var(--medium-grey);
+}
+
+footer ul {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+}
+
+footer li {
+  padding-right: 30px;
+}
+
+/*
+##     ##  #######  ##     ## ######## ########     ###     ######   ######## 
+##     ## ##     ## ###   ### ##       ##     ##   ## ##   ##    ##  ##       
+##     ## ##     ## #### #### ##       ##     ##  ##   ##  ##        ##       
+######### ##     ## ## ### ## ######   ########  ##     ## ##   #### ######   
+##     ## ##     ## ##     ## ##       ##        ######### ##    ##  ##       
+##     ## ##     ## ##     ## ##       ##        ##     ## ##    ##  ##       
+##     ##  #######  ##     ## ######## ##        ##     ##  ######   ########
+*/
+
+.homepage-container {
+  
+  background-image: url(https://images.unsplash.com/photo-1521780171415-783b1cb576e7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=80);
+  background-size: 100%;
+  height: 100vh;
+  background-repeat: no-repeat;
+  text-align: center;
 }
