--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,7 +1,9 @@
-<h1>ACCEDEZ GRATUITEMENT AUX PRIVILEGES HAUT DE GAMME</h1>
-<h3>Ventes privées, programmes fidélité, et nouveauté en moins d'une minute</h3>
-<button>COMMENCER MAINTENANT</button>
-<p>Déjà inscrit ?</p> <p>Se connecter</p>
-<h2>RETROUVEZ PLUS DE 1000 MARQUES</h2>
-<button>VOIR TOUTES LES MARQUES</button>
-<p>Vous êtes une entreprise et souhaitez rejoindre notre réseau ?</p><button>UPOSH|ME BUSINESS</button>
+<div class ="homepage-container">
+    <h1>ACCÉDEZ GRATUITEMENT AUX PRIVILÈGES HAUT DE GAMME</h1>
+    <h3>Ventes privées, programmes fidélité, et nouveauté en moins d'une minute</h3>
+    <button>COMMENCER MAINTENANT</button>
+    <p>Déjà inscrit ?</p> <p>Se connecter</p>
+    <h2>RETROUVEZ PLUS DE 1000 MARQUES</h2>
+    <button>VOIR TOUTES LES MARQUES</button>
+    <p>Vous êtes une entreprise et souhaitez rejoindre notre réseau ?</p><button>UPOSH|ME BUSINESS</button>
+</div>
