--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,7 +16,7 @@
       <li id="to-right">
         {{#if user}}
         <a href="/mybrands">MES MARQUES</a>
-        <a href="/login">{{ user.firstname }} {{ user.lastname }}</a>
+        <a href="/profil-edit">{{ user.firstname }} {{ user.lastname }}</a>
         <form id="logout-form" action="/logout" method="POST">
         <button>SE DECONNECTER</button>
         </form>
