--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,9 +1,12 @@
 <div class ="homepage-container">
+    
     <h1>ACCÉDEZ GRATUITEMENT AUX PRIVILÈGES HAUT DE GAMME</h1>
     <h3>Ventes privées, programmes fidélité, et nouveauté en moins d'une minute</h3>
-    <button>COMMENCER MAINTENANT</button>
-    <p>Déjà inscrit ?</p> <p>Se connecter</p>
+    <button><a href="/signup">COMMENCER MAINTENANT</a></button>
+    <p>Déjà inscrit ?</p> <p><a href="/login">Se connecter</a></p>
+
     <h2>RETROUVEZ PLUS DE 1000 MARQUES</h2>
-    <button>VOIR TOUTES LES MARQUES</button>
-    <p>Vous êtes une entreprise et souhaitez rejoindre notre réseau ?</p><button>UPOSH|ME BUSINESS</button>
+    <button><a href="/signup">VOIR TOUTES LES MARQUES</a></button>
+
+    <p>Vous êtes une entreprise et souhaitez rejoindre notre réseau ?</p><button><a href="/contact">UPOSH|ME BUSINESS</a></button>
 </div>
