--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,9 @@
 *, :before, :after {
   box-sizing: border-box; }
 
+/*Nos polices
+font-family: 'Montserrat', sans-serif;
+font-family: 'Roboto', sans-serif;*/
 /* creer les variables couleurs */
 :root {
   --gold: #EEAB00;
@@ -11,10 +14,19 @@
 body {
   margin: 0;
   background-color: #FDFDFD;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+  font-family: 'Roboto', sans-serif; }
 
 a {
   color: #00B7FF; }
+
+h1 {
+  font-family: 'Montserrat', sans-serif; }
+
+h2 {
+  font-family: 'Montserrat', sans-serif; }
+
+h3 {
+  font-family: 'Montserrat', sans-serif; }
 
 /*
 ##    ##    ###    ##     ## ########     ###    ########  
@@ -25,14 +37,33 @@ a {
 ##   ### ##     ##   ## ##   ##     ## ##     ## ##    ##  
 ##    ## ##     ##    ###    ########  ##     ## ##     ## 
 */
-nav {
-  padding-right: 1em; }
-
-nav ul {
+.navbar-container {
+  background: white;
+  color: var(--black-button);
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  list-style-type: none; }
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 30px;
+  padding-right: 30px;
+  font-family: 'Montserrat', sans-serif;
+  box-shadow: 0px 2px 3px #B5B5B5; }
+
+#to-left {
+  font-size: 20px; }
+
+#to-right {
+  font-size: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 470px; }
+
+nav div:nth-child(1) {
+  margin-right: auto; }
+
+nav div:nth-child(2) {
+  margin-right: 20px; }
 
 /*
 ########  #######   #######  ######## ######## ########  
