--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -23,7 +23,7 @@ body {
 }
 
 a {
-  color: #00B7FF;
+  color: black
 }
 // a {
 //   color:inherit;
@@ -62,7 +62,7 @@ h3 {
   padding-left: 30px;
   padding-right: 30px;
   font-family: 'Montserrat', sans-serif;
-  box-shadow: 0px 2px 3px #B5B5B5;
+  box-shadow: 0px 1px 3px #B5B5B5;
   
 }
 
@@ -138,10 +138,92 @@ footer li {
 */
 
 .homepage-container {
-  
-  background-image: url(https://images.unsplash.com/photo-1521780171415-783b1cb576e7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=80);
-  background-size: 100%;
-  height: 100vh;
-  background-repeat: no-repeat;
-  text-align: center;
+  display:flex;
+  flex-direction: column;
 }
+
+#homepage-premiere-div {
+  margin-top: 3px;
+  padding-bottom: 1000px;
+  background-image: url(https://images.unsplash.com/photo-1512453979798-5ea266f8880c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+}
+
+#homepage-premiere-div h1{
+  padding-top: 100px;
+  font-size: 70px;
+  text-align: center;
+  width: 1400px;
+}
+
+#homepage-premiere-div h3{
+  padding-top: 20px;
+  padding-bottom: 50px;
+  font-size: 25px;
+  width: 480px;
+  text-align: center;
+  
+}
+
+#homepage-premiere-div p{
+  font-style: bold;
+  
+}
+
+#homepage-deuxieme-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 200px;
+}
+
+#homepage-deuxieme-div h2{
+  padding-top: 100px;
+  font-size: 45px;
+  text-align: center;
+  
+  
+}
+
+#homepage-troisieme-lastdiv {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+}
+
+#homepage-troisieme-lastdiv p{
+  
+  font-size: 30px;
+  margin-right: 50px;
+  
+
+}
+
+.homepage-container button {
+  border:none;
+  padding:20px 70px 20px 70px;
+  border-radius:2px;
+  box-shadow:1px 1px 3px #aaa;
+  background: var(--gold);
+  color: white;
+  font-size: 20px;
+}
+
+#button-business {
+  border:none;
+  padding:20px 70px 20px 70px;
+  border-radius:2px;
+  box-shadow:1px 1px 3px #aaa;
+  background: grey;
+  font-size: 20px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+
