--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,12 +1,17 @@
 <div class ="homepage-container">
-    
-    <h1>ACCÉDEZ GRATUITEMENT AUX PRIVILÈGES HAUT DE GAMME</h1>
-    <h3>Ventes privées, programmes fidélité, et nouveauté en moins d'une minute</h3>
-    <button><a href="/signup">COMMENCER MAINTENANT</a></button>
-    <p>Déjà inscrit ?</p> <p><a href="/login">Se connecter</a></p>
+    <div id="homepage-premiere-div">
+        <h1>ACCÉDEZ GRATUITEMENT AUX PRIVILÈGES HAUT DE GAMME</h1>
+        <h3>Ventes privées, programmes fidélité, et nouveauté en moins d'une minute</h3>
+        <button><a href="/signup">COMMENCER MAINTENANT</a></button>
+        <p>Déjà inscrit ?<a href="/login">Se connecter</a></p>
+    </div>
 
-    <h2>RETROUVEZ PLUS DE 1000 MARQUES</h2>
-    <button><a href="/signup">VOIR TOUTES LES MARQUES</a></button>
+    <div id="homepage-deuxieme-div">
+        <h2>RETROUVEZ PLUS DE 1000 MARQUES</h2>
+        <button><a href="/signup">VOIR TOUTES LES MARQUES</a></button>
+    </div>
 
-    <p>Vous êtes une entreprise et souhaitez rejoindre notre réseau ?</p><button><a href="/contact">UPOSH|ME BUSINESS</a></button>
+    <div id="homepage-troisieme-lastdiv">
+        <p>Vous êtes une entreprise et souhaitez rejoindre notre réseau ?</p><button id="button-business"><a href="/contact">UPOSH|ME BUSINESS</a></button>
+    </div>
 </div>
