--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -227,3 +227,26 @@ footer li {
 }
 
 
+/*
+##     ## ##    ##    ########  ########     ###    ##    ## ########   ######  
+###   ###  ##  ##     ##     ## ##     ##   ## ##   ###   ## ##     ## ##    ## 
+#### ####   ####      ##     ## ##     ##  ##   ##  ####  ## ##     ## ##       
+## ### ##    ##       ########  ########  ##     ## ## ## ## ##     ##  ######  
+##     ##    ##       ##     ## ##   ##   ######### ##  #### ##     ##       ## 
+##     ##    ##       ##     ## ##    ##  ##     ## ##   ### ##     ## ##    ## 
+##     ##    ##       ########  ##     ## ##     ## ##    ## ########   ######  
+*/
+
+#mybrands-entete {
+  display: flex;
+  justify-content: center;
+
+  padding-top: 150px;
+
+}
+
+#mybrands-entete h1{
+  margin-right: 700px;
+  font-size: 40px;
+
+}
