--- a/views/brands/mybrands.hbs
+++ b/views/brands/mybrands.hbs
@@ -1,10 +1,10 @@
 <div class="my-brands">
-  <h1>MES MARQUES</h1>
+  <div id="mybrands-entete">
+    <h1>MES MARQUES</h1>
+    <button><a href="/brand-add">+ AJOUTER UNE MARQUE</a></button>
+  </div>
 
-
-  <button><a href="/brand-add">+ AJOUTER UNE MARQUE</a></button>
-
-  <div>
+  <div id="img-brand">
     <ul>
     {{#each brands}}
       <li>
@@ -12,11 +12,11 @@
           <img src="{{logoUrl}}">
           <div>
             <div>{{brandname}}</div>
-          
           </div>
         </div>
       </li>
     {{/each}}
     </ul>
   </div>
+
 </div>
