correction navbar toright, mise en page page mybrands

--- a/views/brands/mybrands.hbs
+++ b/views/brands/mybrands.hbs
@@ -4,19 +4,15 @@
     <button><a href="/brand-add">+ AJOUTER UNE MARQUE</a></button>
   </div>
 
-  <div id="img-brand">
-    <ul>
+  <div id="mybrands-img">
+    
     {{#each brands}}
-      <li>
-        <div>
-          <img src="{{logoUrl}}">
-          <div>
-            <div>{{brandname}}</div>
-          </div>
-        </div>
-      </li>
+      <div><img id="logo" src="{{logoUrl}}"></div>
+      
+
+      
     {{/each}}
-    </ul>
+    
   </div>
 
 </div>
