--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,9 +1,9 @@
 <div class ="homepage-container">
     <div id="homepage-premiere-div">
         <h1>ACCÉDEZ GRATUITEMENT AUX PRIVILÈGES HAUT DE GAMME</h1>
-        <h3>Ventes privées, programmes fidélité, et nouveauté en moins d'une minute</h3>
+        <h3>Ventes privées, programmes fidélité, et nouveautés en moins d'une minute</h3>
         <button><a href="/signup">COMMENCER MAINTENANT</a></button>
-        <p>Déjà inscrit ?<a href="/login">Se connecter</a></p>
+        <p>Déjà inscrit ? <a href="/login">Se connecter</a></p>
     </div>
 
     <div id="homepage-deuxieme-div">
