--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -75,19 +75,26 @@ h3 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 470px;
+  margin-left: auto;
+  
   
 }
 
 nav div:nth-child(1) {
-  margin-right:auto;
+  margin-right: 20px;
 }
 
 nav div:nth-child(2) {
   margin-right:20px;
 }
 
-
+#to-right button{
+  border:none;
+  padding:0 0 0 0;
+  background: white;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
+}
 
 
 
@@ -145,9 +152,10 @@ footer li {
 #homepage-premiere-div {
   margin-top: 3px;
   padding-bottom: 1000px;
-  background-image: url(https://images.unsplash.com/photo-1512453979798-5ea266f8880c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
+  background-image: url(https://images.unsplash.com/photo-1492176273113-2d51f47b23b0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80);
   background-size: 100%;
   background-repeat: no-repeat;
+  
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -155,8 +163,8 @@ footer li {
 }
 
 #homepage-premiere-div h1{
-  padding-top: 100px;
-  font-size: 70px;
+  padding-top: 200px;
+  font-size: 40px;
   text-align: center;
   width: 1400px;
 }
@@ -164,8 +172,8 @@ footer li {
 #homepage-premiere-div h3{
   padding-top: 20px;
   padding-bottom: 50px;
-  font-size: 25px;
-  width: 480px;
+  font-size: 18px;
+  width: 450px;
   text-align: center;
   
 }
@@ -208,7 +216,7 @@ footer li {
 
 .homepage-container button {
   border:none;
-  padding:20px 70px 20px 70px;
+  padding:20px 50px 20px 50px;
   border-radius:2px;
   box-shadow:1px 1px 3px #aaa;
   background: var(--gold);
@@ -246,7 +254,48 @@ footer li {
 }
 
 #mybrands-entete h1{
-  margin-right: 700px;
+  margin-right: 760px;
+  margin-top: 0;
+  margin-bottom: 0;
   font-size: 40px;
 
 }
+
+#mybrands-entete button{
+  border:none;
+  padding:10px 50px 10px 50px;
+  border-radius:2px;
+  box-shadow:1px 1px 3px #aaa;
+  background: var(--black-button);
+  color: white;
+  font-size: 13px;
+
+}
+
+#mybrands-img {
+  display: flex;
+  justify-content: left;
+  margin-left: 300px;
+  width: 1350px;
+  flex-wrap: wrap;
+  padding-top: 150px;
+  padding-bottom: 150px;
+  
+}
+
+#logo {
+  width: 150px; 
+  height: 150px; 
+  object-fit: cover;
+  margin-right: 15px; 
+}
+
+/*
+######  ####  ######   ##    ##    ##     ## ########  
+##    ##  ##  ##    ##  ###   ##    ##     ## ##     ## 
+##        ##  ##        ####  ##    ##     ## ##     ## 
+ ######   ##  ##   #### ## ## ##    ##     ## ########  
+      ##  ##  ##    ##  ##  ####    ##     ## ##        
+##    ##  ##  ##    ##  ##   ###    ##     ## ##        
+ ######  ####  ######   ##    ##     #######  ##
+ /*
