--- a/views/brands/mybrands.hbs
+++ b/views/brands/mybrands.hbs
@@ -1,6 +1,6 @@
 <div class="my-brands">
   <div id="mybrands-entete">
-    <h1>MES MARQUES</h1>
+    <h1>Mes marques</h1>
     <button><a href="/brand-add">+ AJOUTER UNE MARQUE</a></button>
   </div>
 
