--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -224,4 +224,34 @@ footer li {
   object-fit: cover;
   margin-right: 15px; }
 
+/*
+######  ####  ######   ##    ##    ##     ## ########  
+##    ##  ##  ##    ##  ###   ##    ##     ## ##     ## 
+##        ##  ##        ####  ##    ##     ## ##     ## 
+ ######   ##  ##   #### ## ## ##    ##     ## ########  
+      ##  ##  ##    ##  ##  ####    ##     ## ##        
+##    ##  ##  ##    ##  ##   ###    ##     ## ##        
+ ######  ####  ######   ##    ##     #######  ##
+ */
+#signup-page {
+  margin-left: 200px;
+  margin-top: 160px;
+  height: 700px;
+  width: 1000px;
+  font-size: 15px; }
+
+.signup-form div {
+  padding: 10px 10px 10px 400px; }
+
+.signup-form label {
+  display: block; }
+
+#civilite {
+  display: inline-block;
+  width: 100%; }
+
+.signup-form label + input {
+  display: inline-block;
+  width: 100%; }
+
 /*# sourceMappingURL=style.css.map */
