route GET PROFIL DELETED done, profil-updated et deleted.hbs done

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -4,10 +4,10 @@
   <div class="signup-form">
     <form action="/signup" method="POST">
     <div>
-      <label> Civilité </label>
-        <select id="civilite">
-          <option value="Monsieur" name="civilite">Monsieur</option>
-          <option value="Madame" name="civilite">Madame</option>
+      <label> Civilité</label>
+        <select name="civilite">
+          <option value="Monsieur" >Monsieur</option>
+          <option value="Madame" >Madame</option>
       </select>
      
       
