--- a/views/brands/brand-add.hbs
+++ b/views/brands/brand-add.hbs
@@ -1,3 +1,8 @@
+
+liste de toutes les marques 
+
+
+
 {{! 
 1.titre ajouter une marque
 2.une liste de toutes les marques issue de la BD des marques du fichier seeds.js
