--- a/views/auth/profil-edit.hbs
+++ b/views/auth/profil-edit.hbs
@@ -1,14 +1,11 @@
 {{#if user}}
-<h1>OPACITE A METTRE</h1>
   <h1>MON PROFIL</h1>
   <h3>{{ user.civilite }}</h3>
   <h3>{{ user.firstname }}</h3>
   <h3>{{ user.lastname }}</h3>  
   <h3>Membre depuis le {{ user.createdAt }}</h3>
 
-{{#if message}}
-{{message}}
-{{/if}}
+
 
 <form action="/profil-edit" method="POST">
   <label>
@@ -22,9 +19,15 @@
     <button>ENREGISTRER MODIFICATION</button>
 </form>
 
-<form action="/delete-user" method="GET">
+{{#if message}}
+{{message}}
+{{/if}}
+
+<form action="/profil-deleted" method="POST">
   <button>SUPPRIMER MON COMPTE</button>
 </form>
+
+
 {{else}}
   <h3>Vous n'êtes pas connecté.</h3>
   <button><a href="/login"></a>SE CONNECTER</button>
