--- a/views/brands/mybrands.hbs
+++ b/views/brands/mybrands.hbs
@@ -6,7 +6,7 @@
 
   <div id="mybrands-img">
     
-    {{#each brands}}
+    {{#each brands.favoritebrands}}
       <div><img id="logo" src="{{logoUrl}}"></div>
       
 
