lien ajouter mes marques fonctionel

--- a/views/brands/brand-add.hbs
+++ b/views/brands/brand-add.hbs
@@ -12,5 +12,5 @@
     </label>
   <button>ADD</button>
 </form>
-<button>RETOUR VERS MES MARQUES</button>
+<button><a href="/mybrands">RETOUR VERS MES MARQUES </a></button>
 </div>
