routes et lien faq, cgv, confidentialité, caontact done

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -39,16 +39,16 @@
     <div class ="lign-footer"></div>
     <ul>
       <li>
-        <p><!--<a href="/">--> FAQ </a></p>
+        <p><a href="/faq"> FAQ </a></p>
       </li>
       <li>
-        <p><!--<a href="/">--> CONTACT </a></p>
+        <p><a href="/contact"> CONTACT </a></p>
       </li>
       <li>
-        <p><!--<a href="/">--> CONDITIONS </a></p>
+        <p><a href="/cgv"> CONDITIONS </a></p>
       </li>
       <li>
-        <p><!--<a href="/">--> CONFIDENTIALITÉ </a></p>
+        <p><a href="/confidentialite"> CONFIDENTIALITÉ </a></p>
       </li>
     </ul>
   </footer>
