--- a/views/home.hbs
+++ b/views/home.hbs
@@ -12,6 +12,6 @@
     </div>
 
     <div id="homepage-troisieme-lastdiv">
-        <p>Vous êtes une entreprise et souhaitez rejoindre notre réseau ?</p><button id="button-business"><a href="/contact">UPOSH|ME BUSINESS</a></button>
+        <p>Vous êtes une entreprise et souhaitez rejoindre notre réseau ?</p><button id="button-business"><a href="/Bcontact">UPOSH|ME BUSINESS</a></button>
     </div>
 </div>
