--- a/views/business/confirmationBcontact.hbs
+++ b/views/business/confirmationBcontact.hbs
@@ -1,4 +1,4 @@
-<div id="business">
+<div id="business-confirm">
   <h1>Augmentez vos ventes grâce à UPOSH|ME</h1>
   <form action="/Bcontact" method="POST">
     <label>
@@ -29,10 +29,15 @@
       EMAIL
       <input type="text" id="input-email" name="email" placeholder="Email" />
     </label>
-        <button>ETRE RECONTACTE</button>
+    
+    <button>ETRE RECONTACTE</button>
     {{!-- error message will be added here --}}
     {{#if errorMessage}}
     <p class="error">{{errorMessage}}</p>
     {{/if}}
   </form>
+</div>
+<div>
+  <p>Votre demande a ete prise en compte, vous serez contacté tres prochainement. Merci pour votre interet</p>
+  <button><a href="/"></a>RETOUR A LA PAGE D'ACCUEIL</button>
 </div>
