Essai avec Elodie

--- a/views/business/businesscontact.hbs
+++ b/views/business/businesscontact.hbs
@@ -5,6 +5,20 @@
       SOCIETE
       <input type="text" name="society" placeholder="Société" />
     </label>
+
+    <label> ACTIVITE PRINCIPALE</label>
+        <select name="activity">
+          <option value="">--Selectionner--</option>
+          <option value="Mode & Accessoires" >Mode & Accessoires</option>
+          <option value="Beauté & Soins" >Beauté & Soins</option>
+          <option value="Maison" >Maison</option>
+          <option value="Vin & Gastronomie" >Vin & Gastronomie</option>
+          <option value="Sport" >Sport</option>
+          <option value="Technologie" >Technologie</option>
+          <option value="Jeux & Gadgets" >Jeux & Gadgets</option>
+    </select>
+
+
     <label>
       ACTIVITE PRINCIPALE
       <input type="text" name="activity" placeholder="Activité principale" />
