--- a/views/auth/profil-deleted.hbs
+++ b/views/auth/profil-deleted.hbs
@@ -1,4 +1,4 @@
 <div class="popin">
         <p>Votre compte à bien été supprimé.</p>
-        <button>RETOUR A LA PAGE D'ACCUEIL</button>
+        <button> <a href="/"> RETOUR A LA PAGE D'ACCUEIL</a> </button>
     </div>
