debug formulaire businesscontact avec selection d'activité

--- a/views/brands/mybrands.hbs
+++ b/views/brands/mybrands.hbs
@@ -6,8 +6,9 @@
 
   <div id="mybrands-img">
     
-    {{#each brands.favoritebrands}}
+    {{#each user}}
       <div><img id="logo" src="{{logoUrl}}"></div>
+      <div>{{brandname}}</div> 
       
 
       
