css login et error message form login et sign up + hover sur les liens de la navbar

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,7 +17,8 @@ body {
   font-family: 'Roboto', sans-serif; }
 
 a {
-  color: black; }
+  color: inherit;
+  text-decoration: none; }
 
 h1 {
   font-family: 'Montserrat', sans-serif; }
@@ -45,19 +46,25 @@ h3 {
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 30px;
-  padding-right: 30px;
+  padding-right: 10px;
   font-family: 'Montserrat', sans-serif;
   box-shadow: 0px 1px 3px #B5B5B5; }
 
 #to-left {
   font-size: 20px; }
 
+.navbar-container a:hover {
+  color: var(--gold); }
+
 #to-right {
-  font-size: 15px;
+  font-size: 14px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-left: auto; }
+
+#to-right button:hover {
+  color: var(--gold); }
 
 nav div:nth-child(1) {
   margin-right: 20px; }
@@ -70,7 +77,7 @@ nav div:nth-child(2) {
   padding: 0 0 0 0;
   background: white;
   font-family: 'Montserrat', sans-serif;
-  font-size: 15px; }
+  font-size: 14px; }
 
 /*
 ########  #######   #######  ######## ######## ########  
@@ -287,5 +294,73 @@ footer li {
   background: var(--black-button);
   color: white;
   font-size: 13px; }
+
+#signup-page p {
+  text-align: center;
+  font-weight: bold;
+  color: red; }
+
+/*
+##        #######   ######   #### ##    ## 
+##       ##     ## ##    ##   ##  ###   ## 
+##       ##     ## ##         ##  ####  ## 
+##       ##     ## ##   ####  ##  ## ## ## 
+##       ##     ## ##    ##   ##  ##  #### 
+##       ##     ## ##    ##   ##  ##   ### 
+########  #######   ######   #### ##    ## 
+*/
+#login-page {
+  text-align: center;
+  margin-top: 100px;
+  height: 800px;
+  font-size: 15px; }
+
+#login-page h1 {
+  text-align: center;
+  padding-bottom: 50px; }
+
+#login-page div {
+  padding: 10px 700px 10px 700px; }
+
+.login-form label {
+  display: block;
+  font-family: 'Roboto', sans-serif;
+  padding-bottom: 10px;
+  padding-left: 2px;
+  text-align: left;
+  color: black;
+  font-weight: bold; }
+
+.login-form label + input {
+  display: inline-block;
+  width: 100%;
+  height: 50px;
+  font-size: 15px;
+  padding-left: 10px;
+  background-color: #E9E9E9;
+  border-style: none;
+  margin-bottom: 20px; }
+
+.login-form input:hover {
+  background-color: #ECCC8D; }
+
+.login-form input:focus {
+  color: --var(--black-button);
+  background-color: #ECCC8D; }
+
+.login-form button {
+  margin-top: 60px;
+  border: none;
+  padding: 15px 50px 15px 50px;
+  border-radius: 2px;
+  box-shadow: 1px 1px 3px #aaa;
+  background: var(--black-button);
+  color: white;
+  font-size: 13px; }
+
+#login-page p {
+  text-align: center;
+  font-weight: bold;
+  color: red; }
 
 /*# sourceMappingURL=style.css.map */
