--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -198,13 +198,12 @@ footer li {
   padding-bottom: 200px;
 }
 
-#homepage-deuxieme-div h2{
+#homepage-deuxieme-div h2 {
   padding-top: 100px;
   font-size: 45px;
   text-align: center;
-  
-  
 }
+
 
 #homepage-troisieme-lastdiv {
   display: flex;
@@ -214,9 +213,8 @@ footer li {
 
 }
 
-#homepage-troisieme-lastdiv p{
-  
-  font-size: 30px;
+#homepage-troisieme-lastdiv p {
+  font-size: 20px;
   margin-right: 50px;
   
 
@@ -224,12 +222,13 @@ footer li {
 
 .homepage-container button {
   border:none;
-  padding:20px 50px 20px 50px;
+  padding:20px 55px 20px 55px;
   border-radius:2px;
   box-shadow:1px 1px 3px #aaa;
   background: var(--gold);
   color: white;
-  font-size: 20px;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 #button-business {
@@ -454,6 +453,91 @@ footer li {
   text-align: center;
   font-weight: bold;
   color: red;
+}
+
+/*
+##     ## ##    ##    ########  ########   #######  ######## #### ##       
+###   ###  ##  ##     ##     ## ##     ## ##     ## ##        ##  ##       
+#### ####   ####      ##     ## ##     ## ##     ## ##        ##  ##       
+## ### ##    ##       ########  ########  ##     ## ######    ##  ##       
+##     ##    ##       ##        ##   ##   ##     ## ##        ##  ##       
+##     ##    ##       ##        ##    ##  ##     ## ##        ##  ##       
+##     ##    ##       ##        ##     ##  #######  ##       #### ######## 
+*/
+
+#profil-page{
+  text-align: center;
+  margin-top: 100px;
+  height: 800px;
+  font-size: 15px;
+}
+
+#profil-page h1{
+  padding-bottom: 50px;
+}
+
+#profil-page h4{
+  margin-bottom: 70px;
+}
+
+.editprofil-form {
+  padding: 10px 740px 10px 740px;
+}
+
+.editprofil-form label {
+  display: block;
+  font-family: 'Roboto', sans-serif;
+  padding-bottom: 10px;
+  padding-left: 2px;;
+  text-align: left;
+  color: black;
+  font-weight: bold;
+ }
+ 
+ .editprofil-form label+input {
+    display: inline-block;
+    width: 100%;
+    height: 50px;
+    font-size: 15px;
+    padding-left: 10px;
+    background-color: #E9E9E9;
+    border-style: none;
+    margin-bottom: 20px;
+ }
+
+ .editprofil-form input:hover {
+  background-color: #ECCC8D;
+ }
+ 
+ .editprofil-form input:focus {
+  color: --var(--black-button);
+  background-color: #ECCC8D;
+ }
+ 
+ .editprofil-form button {
+  margin-top: 60px;
+  border:none;
+  padding:15px 50px 15px 50px;
+  border-radius:2px;
+  box-shadow:1px 1px 3px #aaa;
+  background: var(--black-button);
+  color: white;
+  font-size: 13px;
+ }
+
+ #profil-page a {
+   font-size: 12px;
+ }
+
+.edit-confirm {
+  color: var(--gold);
+  font-weight: bold;
+  margin-bottom: 150px;
+}
+
+.profil-delete button{
+  border: none;
+  background-color: var(--light-grey);
 }
 
 
