--- a/views/auth/tuto.hbs
+++ b/views/auth/tuto.hbs
@@ -1,1 +1,18 @@
-<h1>Videooooo</h1>
+<div id="welcome-tuto">
+    <h1>Bienvenue</h1>
+
+    {{!-- <video src="exemple.webm" width="375" height="280" controls></video> --}}
+
+
+
+    <video controls width="800" height="500">
+
+        <source src="../../public/video/toto.mp4"
+                type="video/mp4">
+
+    </video>
+
+    <p>Vous n'arrivez pas à lire la vidéo ?
+        Cliquez <a href="https://explee.com/fr/video/0rp3g6d"><u>ici</u></a>.</p>
+
+</div>
