--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,11 +3,12 @@
         <h1>ACCÉDEZ GRATUITEMENT AUX PRIVILÈGES HAUT DE GAMME</h1>
         <h3>Ventes privées, programmes fidélité, et nouveautés en moins d'une minute</h3>
         <button><a href="/signup">COMMENCER MAINTENANT</a></button>
-        <p>Déjà inscrit ? <a href="/login">Se connecter</a></p>
+        <p>Déjà inscrit ? <a href="/login"><u>Se connecter</u></a></p>
     </div>
 
     <div id="homepage-deuxieme-div">
         <h2>RETROUVEZ PLUS DE 1000 MARQUES</h2>
+        <img src="https://www.nice.tendancefrance.com/images/nice/1496783269-Capture.JPG">
         <button><a href="/signup">VOIR TOUTES LES MARQUES</a></button>
     </div>
 
