--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -324,7 +324,6 @@ footer li {
   font-size: 15px; }
 
 #login-page h1 {
-  text-align: center;
   padding-bottom: 50px; }
 
 #login-page div {
@@ -460,5 +459,129 @@ footer li {
 
 #welcome-tuto h1 {
   margin-bottom: 100px; }
+
+/*
+########  ########     ###    ##    ## ########        ###    ########  ########  
+##     ## ##     ##   ## ##   ###   ## ##     ##      ## ##   ##     ## ##     ## 
+##     ## ##     ##  ##   ##  ####  ## ##     ##     ##   ##  ##     ## ##     ## 
+########  ########  ##     ## ## ## ## ##     ##    ##     ## ##     ## ##     ## 
+##     ## ##   ##   ######### ##  #### ##     ##    ######### ##     ## ##     ## 
+##     ## ##    ##  ##     ## ##   ### ##     ##    ##     ## ##     ## ##     ## 
+########  ##     ## ##     ## ##    ## ########     ##     ## ########  ########  
+*/
+#brand-add {
+  text-align: center;
+  margin-top: 100px;
+  height: 1000px;
+  font-size: 15px; }
+
+#brand-add h1 {
+  padding-bottom: 50px; }
+
+#brand-add div {
+  padding: 10px 300px 10px 300px; }
+
+.addbrand-form select {
+  width: 100%;
+  height: 500px;
+  font-size: 15px;
+  background-color: #E9E9E9;
+  border-style: none; }
+
+.addbrand-form button {
+  margin-top: 60px;
+  border: none;
+  padding: 15px 50px 15px 50px;
+  border-radius: 2px;
+  box-shadow: 1px 1px 3px #aaa;
+  background: var(--black-button);
+  color: white;
+  font-size: 13px; }
+
+#brand-add button {
+  margin-top: 60px;
+  border: none;
+  padding: 15px 50px 15px 50px;
+  border-radius: 2px;
+  box-shadow: 1px 1px 3px #aaa;
+  background: var(--black-button);
+  color: white;
+  font-size: 13px; }
+
+#brand-add p {
+  text-align: center;
+  font-weight: bold;
+  color: red; }
+
+/*
+########  ##     ##  ######  #### ##    ## ########  ######   ######      ######   #######  ##    ## ########    ###     ######  ######## 
+##     ## ##     ## ##    ##  ##  ###   ## ##       ##    ## ##    ##    ##    ## ##     ## ###   ##    ##      ## ##   ##    ##    ##    
+##     ## ##     ## ##        ##  ####  ## ##       ##       ##          ##       ##     ## ####  ##    ##     ##   ##  ##          ##    
+########  ##     ##  ######   ##  ## ## ## ######    ######   ######     ##       ##     ## ## ## ##    ##    ##     ## ##          ##    
+##     ## ##     ##       ##  ##  ##  #### ##             ##       ##    ##       ##     ## ##  ####    ##    ######### ##          ##    
+##     ## ##     ## ##    ##  ##  ##   ### ##       ##    ## ##    ##    ##    ## ##     ## ##   ###    ##    ##     ## ##    ##    ##    
+########   #######   ######  #### ##    ## ########  ######   ######      ######   #######  ##    ##    ##    ##     ##  ######     ##    
+*/
+#business-contact {
+  text-align: center;
+  margin-top: 100px;
+  height: 1000px;
+  font-size: 15px; }
+
+#business-contact h1 {
+  text-align: center;
+  padding-bottom: 50px; }
+
+#business-contact div {
+  padding: 10px 550px 10px 550px; }
+
+.business-form label {
+  display: block;
+  font-family: 'Roboto', sans-serif;
+  padding-bottom: 10px;
+  padding-left: 2px;
+  text-align: left;
+  color: black;
+  font-weight: bold; }
+
+.business-form select {
+  width: 100%;
+  height: 50px;
+  font-size: 15px;
+  background-color: #E9E9E9;
+  border-style: none;
+  margin-bottom: 20px; }
+
+.business-form label + input {
+  display: inline-block;
+  width: 100%;
+  height: 50px;
+  font-size: 15px;
+  padding-left: 10px;
+  background-color: #E9E9E9;
+  border-style: none;
+  margin-bottom: 20px; }
+
+.business-form input:hover {
+  background-color: #ECCC8D; }
+
+.business-form input:focus {
+  color: --var(--black-button);
+  background-color: #ECCC8D; }
+
+.business-form button {
+  margin-top: 60px;
+  border: none;
+  padding: 15px 50px 15px 50px;
+  border-radius: 2px;
+  box-shadow: 1px 1px 3px #aaa;
+  background: var(--black-button);
+  color: white;
+  font-size: 13px; }
+
+#business-contact p {
+  text-align: center;
+  font-weight: bold;
+  color: red; }
 
 /*# sourceMappingURL=style.css.map */
