ROUTE POST BRAND ADD KO et tuto.hbs et style.css done

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -348,9 +348,9 @@ footer li {
   border-style: none;
 }
 
-// .sign-up-form select>option:hover {
-//   background-color: #ECCC8D;
-// } ??????
+.signup-form select>option:hover {
+  background-color: #ECCC8D;
+} 
 
 .signup-form label+input {
     display: inline-block;
