--- a/views/auth/tuto.hbs
+++ b/views/auth/tuto.hbs
@@ -13,6 +13,6 @@
     </video>
 
     <p>Vous n'arrivez pas à lire la vidéo ?
-        Cliquez <a href="https://explee.com/fr/video/0rp3g6d"><u>ici</u></a>.</p>
+        Cliquez <a href="https://explee.com/fr/video/0rp3g6d" target="_blank"><u>ici</u></a>.</p>
 
 </div>
