--- a/views/brands/mybrands.hbs
+++ b/views/brands/mybrands.hbs
@@ -6,7 +6,7 @@
 
   <div id="mybrands-img">
     
-    {{#each user}}
+    {{#each brands }}
       <div><img id="logo" src="{{logoUrl}}"></div>
       <div>{{brandname}}</div> 
       
